Bug fixes
portfolio page not showing up on github
tried removing {%current%}

--- a/css/main.css
+++ b/css/main.css
@@ -99,6 +99,10 @@ header {
 	display: block;
 }
 
+.current {
+	color: gray;
+}
+
 .logo {
 	height: 100px;
 	width: 150px;
